# password_manager

./: .gitignore  .pre-commit-config.yaml  .pypirc  DML.md  MANIFEST.in  README.md  app.py  env.sh  home.html  pyproject.toml  pytest.sh  requirements.txt  schema.sql  setup.cfg  setup_db.sh  startup.sh  test-requirements.txt
.github/workflows/: python-package.yml
circus/: circus.ini
dao/: db_access.py
src/dao/: db_access.py
src/utils/: constants.py  crypto.py
src/views/: actor.py  profile.py
src/webapps/: app.py
ssl/: license.p12  req.cnf  simvault.crt
static/: form_actions.js
static/styles/: all.min.css  form_styles.css
templates/: base.html  edit.html  home.html  index.html  login.html  profile.html  signup.html
tests/: conftest.py  test_crypto_utils.py  test_profile_api.py  test_signup_api.py  valid.p12
utils/: constants.py
views/: actor.py  profile.py
