[metadata]
name = simvault-password-manager
version = 1.0.0
author = Srivignesh Murugesan
author_email = srivignesh.cse@gmail.com
description = Password management software
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/SrivigneshM/password_manager
project_urls =
    Bug Tracker = https://github.com/SrivigneshM/password_manager/issues
classifiers =
    Programming Language :: Python :: 3.7.7
    License :: NA
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7.7
install_requires =
    circus==0.13.0
    sqlite3>=3.28.0

[options.packages.find]
where = src
